# id-translation

./: .bumpversion.cfg  .codespellrc  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  mypy.ini  noxfile.py  pyproject.toml  pytest.ini  run-docker-dvdrental.sh  run-invocations.sh  run-jupyter.sh  tasks.py
.github/workflows/: benchmark.yml  codeql-analysis.yml  pre-commit-autoupdate.yml  release.yml  tests.yml
benchmark/: .gitignore  README.md  pyproject.toml
benchmark/history/: .gitkeep  v0.13.0.json  v0.14.0.json  v0.14.1.json  v0.15.0.json  v0.15.1.json  v0.15.2.json  v0.15.3.json  v0.15.4.json  v1.0.0.json  v1.0.1.json  v1.0.2.json  v1.0.3.json  v1.0.4.json  v1.1.0.json  v1.2.0.json  v1.2.1.json
benchmark/scripts/: backfill.py  compare_python.py
benchmark/src/id_translation_benchmark/: __init__.py  __main__.py  backends.py  capabilities.py  ci.py  cli.py  data.py  history.py  payload.py  report.py  suite.py  support.py  test_performance.py  types.py
benchmark/src/id_translation_benchmark/suites/: test_baseline.py
benchmark/tests/: test_ci.py  test_correctness.py
dev/missing-dependencies/: all-missing.py  only-pandas.py  only-sqlalchemy.py
docs/: api.rst  conf.py  development.rst  generate-dvdrental-logs.py  generate-rainbow-logs.py  index.rst  translator.rst
docs/_static/: logging-style-rainbow.html  style.css
docs/_static/logging/: debug-pretty.html  debug-rainbow.html  info-pretty.html  verbose-pretty.html  verbose-rainbow.html
docs/_templates/: gallery.html
docs/_templates/autosummary/: base.rst  module.rst  no-member-class.rst
docs/documentation/: dvdrental-exit-message.txt  dvdrental-records.json  index.rst  io-ranks.csv  mapping-primer.rst  migration-guide.rst  override-only-fetching.toml  translation-concurrency.rst  translation-io.rst  translation-logging.rst  translation-primer.rst  translator-config.rst
docs/documentation/cookbook/: index.rst
docs/documentation/examples/: dvdrental.rst  index.rst
docs/log-lexer/: pyproject.toml
notebooks/: data.py
notebooks/demo/cookbook/: dict-keys.ipynb  pandas-index.ipynb
notebooks/demo/pickle-translation/: PickleFetcher.ipynb  config.toml
notebooks/demo/sql-translation/: SqlFetcher.ipynb  config.toml
notebooks/demo/translation-primer/: api.ipynb  config.ipynb  config.toml
orm-example/: connection-strings.py  engine.py  main.py  models.py  orm_fetcher.py  populate-database.py
src/id_translation/: __init__.py  __version__.py  _base_metadata.py  _compat.py  _config_utils.py  _load_toml.py  _translator.py  _uuid_utils.py  exceptions.py  factory.py  logging.py  settings.py  testing.py  translator_typing.py  types.py
src/id_translation/_tasks/: __init__.py  _base_task.py  _map.py  _names.py  _translate.py
src/id_translation/_utils/: __init__.py  debug_logging_formatter.py  emit_warning.py
src/id_translation/dio/: __init__.py  _data_structure_io.py  _dict.py  _pandas.py  _repository.py  _resolve.py  _sequence.py  _set.py  _single_value.py  _util.py  exceptions.py
src/id_translation/fetching/: __init__.py  _abstract_fetcher.py  _cache.py  _cache_access.py  _cache_coordinator.py  _fetcher.py  _memory_fetcher.py  _multi_fetcher.py  _pandas_fetcher.py  _sql_fetcher.py  exceptions.py  support.py  types.py
src/id_translation/mapping/: __init__.py  _cardinality.py  _directional_mapping.py  _heuristic_score.py  _mapper.py  exceptions.py  filter_functions.py  heuristic_functions.py  score_functions.py  support.py  types.py
src/id_translation/offline/: __init__.py  _format.py  _format_applier.py  _magic_dict.py  _translation_map.py  parse_format_string.py  types.py
src/id_translation/toml/: __init__.py  _component_factories.py  _factory.py  _load_toml.py
src/id_translation/transform/: __init__.py  types.py
src/id_translation/utils/: __init__.py  _base_metadata.py  _config_utils.py  _load_toml.py  logging.py  translation_helper.py
tests/: __init__.py  config.imdb.toml  config.toml  conftest.py  test_factory.py  test_free_threading.py  test_go_offline.py  test_indexing_in_format.py  test_jsonschema.py  test_logging.py  test_optional_dependencies.py  test_rename.py  test_translator.py
tests/dio/: expected-order.csv  test_extract.py  test_insert.py  test_large.py  test_not_inplace_translatable.py  test_ranks.py  test_register_io.py
tests/dio/integration/: test_dask.py  test_pandas.py  test_polars.py  test_pyarrow.py  test_ray.py
tests/dvdrental/: _test_complex.py  conftest.py  minio.toml  sql-fetcher.toml  test_complex_format.py  test_dvdrental.py  test_key_events.py  test_minio.py  test_uuid_mitigations.py  translation.toml
tests/dvdrental/docker/: Dockerfile  build.sh  docker-compose.yml  push.sh
tests/fetching/: conftest.py  test_abstract_fetcher.py  test_memory_fetcher.py  test_multi_fetcher.py  test_pandas_fetcher.py  test_partial_cache_hit.py  test_placeholder_attributes.py  test_sql_fetcher.py
tests/mapping/: conftest.py  singular-to-plural.txt  test_bidirectional_mapping.py  test_cardinality.py  test_filter_functions.py  test_heuristic_score.py  test_heuristics_functions.py  test_mapper.py  test_mapper_hierarchy.py  test_score.py  test_score_functions.py  test_support.py
tests/mapping/tasks/: test_names.py
tests/offline/: test_format.py  test_format_applier.py  test_magic_dict.py  test_parse_format_string.py  test_placeholder_translations.py  test_translation_map.py
tests/offline/test_translator_typing/: conftest.py  test_typed_dicts.py
tests/overload/: test_dict.py  test_misc.py  test_pandas.py  test_primitive.py  test_tuple.py
tests/transform/: config.toml  fetcher-and-transformer.toml  fetcher-only.toml  main.toml  test_factory.py
tests/transform/bitmask/: conftest.py  test_ops.py  test_transformer.py  test_translator.py
tests/translator_typing/: conftest.py  test_typed_dicts.py  validate_func_annotations.py
tests/utils/: test_logging.py
tests/utils/test_helper/: test_convert.py  test_copy.py  test_docs.py  test_helper_reserved.py  (+3 more)
(+60 files in other folders)
