[project]
name = "id-translation-benchmark"
version = "0.1.0"
description = "Benchmark suite for `id-translation`, focused on large datasets with vectorized types."
authors = [{ name = "Richard Sundqvist", email = "richard.sundqvist@live.se" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "id-translation",
    "rics >= 6.2.0", # stratify performance API.
    "pandas >= 2.0.3",
    "polars >= 1.41.0",
    "numpy",
    "click >= 8.1",
]

[project.optional-dependencies]
plot = [
    "rics[plotting]", # seaborn + matplotlib for plot_run.
    "seaborn",
]

[dependency-groups]
dev = ["pytest~=9.0.2"]

[project.scripts]
id-translation-benchmark = "id_translation_benchmark.cli:main"

[tool.uv.sources]
id-translation = { path = "..", editable = true }

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
extend = "../pyproject.toml"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D",
    "S101",
    "ANN",
    "PLR2004",
    "PLC0415",
    "PLR0911",
]
"scripts/*" = [
    "D",
    "S603",    # Trusted local subprocess (uv).
    "S607",    # Partial executable path (uv).
    "PLC0415",
    "PLR0912",
    "PLR0915",
    "PERF401",
]
"src/id_translation_benchmark/*" = [
    "PLC0415", # Intentional lazy/optional imports (graceful degradation across releases + extras).
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
